--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,12 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1
+  matlab: mathworks/matlab@0.1
 jobs:
   build:
-    executor:
-      name: node/default
-      tag: '10.4'
+    machine:
+      image: ubuntu-1604:201903-01
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-      - run: npm run test
+      - matlab/install                       # previously `wget ...`
+      - matlab/run-command:                  # previously `matlab -batch ...`
+          command: "disp('Hello World')"
