--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   matlab: mathworks/matlab@0.3.0
+  codecov: codecov/codecov@1.0.2
 jobs:
   build:
     machine:
@@ -10,6 +11,7 @@ jobs:
       - matlab/install 
       - matlab/run-tests:
           test-results-junit: artifacts/test_results/matlab/results.xml
+          code-coverage-cobertura: artifacts/coverage/codeCoverage.xml          
           source-folder: .;src
       - store_test_results:
           path: artifacts/test_results
