--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,10 @@
 version: 2.1
 orbs:
-  matlab: mathworks/matlab@0.3.0
-  codecov: codecov/codecov@1.0.2
+  matlab: mathworks/matlab@0.7.1  
 jobs:
   build:
     machine:
-      image: ubuntu-1604:201903-01
+      image: 'ubuntu-2004:202111-02'
     steps:
       - checkout
       - matlab/install 
